--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-div {
-    margin: 20px;
-    border: 10px solid #000;
-    padding: 30px;
-}
+
 h1 {
     color:greenyellow;
     font-size: 60px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 50px;
+    border: 10px solid #000;
+    padding: 30px;
 }
 p {
     color:rgb(1, 1, 1);
