--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1 {
     color:greenyellow;
     font-size: 60px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-left: 50px;
+    margin: 50px;
     border: 10px solid #000;
     padding: 30px;
 }
