collection image update

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ p {
     color:rgb(1, 1, 1);
     font-size: 30px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 30px;
+    margin: 50px;
 }
 a {
     color:black;
