--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ a {
     font-size: 30px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+styledimg {
+    background-image: collections.png;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 20vh;
+    }
