--- a/style.css
+++ b/style.css
@@ -1,26 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap');
 
-h1 {
-    color:greenyellow;
-    font-size: 60px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 50px;
-    border: 10px solid #000;
-    padding: 30px;
-}
-p {
-    color:rgb(1, 1, 1);
-    font-size: 30px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 30px;
-    margin: 50px;
+body {
+    font-family: 'Space Grotesk', sans-serif;
 }
 a {
+    text-decoration: none;
+    margin:30%;
+    font-family: 'Space Grotesk', sans-serif;
     color:black;
     font-size: 30px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-styledimg {
-    background-image: collections.png;
-    background-repeat: no-repeat;
-    width: 100vw;
+img {
+    width: 100%;
     }
+.collections-img {
+        width: 100%;
+    }
+
