--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 
 body {
     font-family: 'Space Grotesk', sans-serif;
+    margin: 20px;
+}
+p {
+    margin: 20px;
+}
+h1 {
+    margin 20px;
 }
 a {
     text-decoration: none;
@@ -13,7 +20,9 @@ a {
 img {
     width: 100%;
     }
-.collections-img {
-        width: 100%;
-    }
-
+.collections-img { 
+    width: 100%;
+}
+.journal-site-link {
+    margin: 0 px;
+}
