--- a/Project one/ponestyle.css
+++ b/Project one/ponestyle.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Space Grotesk', sans-serif;
     margin: 20px;
+    color:#CB364D;
 }
 
 p {
@@ -8,7 +9,7 @@ p {
 }
 
 h1 {
-    margin 20px;
+    margin: 20px;
 }
 
 img {
@@ -33,7 +34,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
-    z-index: 2;
+    
+}
+header a {
+    z-index: 99;
 }
 
 .navtext {
@@ -152,79 +156,85 @@ header {
 
 .head { 
     width: 15%;
-    position: relative;
+    position: absolute;
     transform: rotate(3deg);
     z-index: 2;
-    top: -600px;
-    right: -340px;  
+    top: 200px;
+    left: 55%;  
 }
 
 .column { 
     width: 14%;
-    position: relative;
+    position: absolute;
     z-index: 1;
-    top: -300px;
-    right: -400px;  
+    top: 200px;
+    left: 75%;  
 }
 
 
 .hearts-3-1 { 
     width: 40%;
-    position: relative;
+    position: absolute;
     z-index: 1;
-    top: -100px;
+    top: 1000px;
     left: 40px;
+}
+.heart-content {
+    width:40%;
+    position:absolute;
+    top:1100px;
+    left:40px;
 }
 
   .love {
     width: 35%;
     z-index: 1;     
     position: absolute;
-    left: 816px;
-    top: 1242.22px;
+    left: 55%;
+    top: 1100px;
   }
   
   .maternity {
     width: 40%;
-    position: relative;
+    position: absolute;
     z-index: 2;
-    top: -10px;
-    right: -760px;
+    top: 1300px;
+    left: 55%;
     transform: rotate(1deg);
   }
 
 
   .desire { 
     width: 40%;
-    position: relative;
+    position: absolute;
     z-index: 2;
-    top: 100px;
-    right: -200px;
+    top: 1450px;
+    left: 55%;
     transform: rotate(-1deg);
 }
 
 .feminity { 
     width: 40%;
-    position: relative;
+    position: absolute;
     z-index: 2;
-    top: 130px;
-    right: -750px;
+    top: 1600px;
+    left: 55%;
     transform: rotate(2deg);  
 }
 .sex { 
     width: 40%;
-    position: relative;
+    position: absolute;
     z-index: 2;
-    top: 250px;
-    right: -200px;
+    top: 1750px;
+    left: 55%;
     transform: rotate(3deg);  
 }
 
 .hearts-3-2 { 
     width: 40%;
-    position: relative;
+    position: absolute;
     z-index: 2;
-    top: 190px;
+    top: 2000px;
     left: 40px;
 }
 
