--- a/project-two/ptwostylesheet.css
+++ b/project-two/ptwostylesheet.css
@@ -3,8 +3,17 @@
 p {font-family: 'Lora', serif;
 }
 
-h1 {font-family: 'Lora', serif;
+.pwhite {font-family: 'Lora', serif;
+  color: white;
+  position: absolute;
+}
+
+h1 {font-family: 'Climate Crisis', cursive;
   font-size: 30px;
+}
+
+h2 {font-family: 'Climate Crisis', cursive;
+  font-size: 15px;
 }
 
 
@@ -98,58 +107,136 @@ h1 {font-family: 'Lora', serif;
 
   <!-- aboutpage --->
 
-  .containerabout {
+  .container-about-nav {
     display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 
-    grid-template-rows: auto 1fr;
-    grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+    'about-nav'
+    'about-content';
     
-    gap: 72px;
+    gap: 0px;
     height: 100%;
  
-
   }
 
+  .about-nav {
+    display: grid; 
+  }
 
+  #nav-1 {
 
-.navabout {
-  border-bottom: .3px solid white;
-  background-color: green;
-  padding: 5px;
+ 
+    border-right: .3px solid black;
+    grid-row-start: 1;
+    grid-column-start: 1;
+ 
+    grid-row-end: 1;
+    grid-column-end: 2;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-right;
+    
+ }
+ #nav-2 {
+ 
+
+    grid-row-start: 1;
+    grid-column-start: 2;
+ 
+    grid-row-end: 1;
+    grid-column-end: 3;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-right;
+    
+ }
+ #nav-3 {
+ 
+
+    grid-row-start: 1;
+    grid-column-start: 3;
+ 
+    grid-row-end: 1;
+    grid-column-end: 4;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-right;
+    
+ }
+ #nav-4 {
+ 
+ 
+    grid-row-start: 1;
+    grid-column-start: 4;
+ 
+    grid-row-end: 1;
+    grid-column-end: 5;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-right;
+    
+ }
+ #nav-5 {
+ 
+    grid-row-start: 1;
+    grid-column-start: 5;
+ 
+    grid-row-end: 1;
+    grid-column-end: 6;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-right;
+    
+ }
+
+ #nav-6 {
+ 
+ 
   grid-row-start: 1;
-  grid-column-start: 1;
+  grid-column-start: 6;
 
-  grid-row-end: 2;
-  grid-column-end: 12;
+  grid-row-end: 1;
+  grid-column-end: 7;
+
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-right;
+  
 }
 
-.aboutleftbox {
+
+.about-content {
+  display: grid; 
+}
+
+#sidebar-1 {
+
   border-right: .3px solid white;
-  background-color: yellow;
   grid-row-start: 2;
   grid-column-start: 1;
 
   grid-row-end: 3;
-  grid-column-end: 3;
+  grid-column-end: 2;
+  
 }
-
-.aboutboxes {
+#content-2 {
   border-left: .3px solid white;
-  background-color: blue;
+  text-decoration-color: white;
   grid-row-start: 2;
-  grid-column-start: 3;
-
+  grid-column-start: 2;
   grid-row-end: 3;
-  grid-column-end: 11;
-  padding: 5px;
+  grid-column-end: 7;
 }
 
-.navaboutright {
-  background-color: purple;
-  padding: 5px;
-  grid-row-start: 2;
-  grid-column-start: 11;
+.fuzz-about-parent {
+  position: relative;
+}
 
-  grid-row-end: 3;
-  grid-column-end: 12;
+.blackblur{
+  position: absolute;
+  z-index:-1;
+  top: px;
+  left: 0px;
 }
