--- a/project-two/ptwostylesheet.css
+++ b/project-two/ptwostylesheet.css
@@ -17,6 +17,86 @@ h2 {font-family: 'Climate Crisis', cursive;
 }
 
 
+  /*homepage*/
+
+   /*navigation*/
+
+/* Position the navbar container inside the image */
+
+
+/* The navbar */
+
+
+
+
+
+  * {box-sizing: border-box;}
+  body {font-family: Verdana, sans-serif;}
+  .mySlides {display: none;}
+  img {vertical-align: middle;}
+  
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: -10px;
+    z-index: -1;
+    padding-top: 45px;
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+  }
+
+  /*shopping*/
+
 .container {
     display: grid; 
     grid-template-columns: 1.2fr 3fr 0.5fr; 
@@ -105,7 +185,8 @@ h2 {font-family: 'Climate Crisis', cursive;
     display: flex;
   }
 
-  <!-- aboutpage --->
+  /*aboutpage*/
+
 
   .container-about-nav {
     display: grid; 
