--- a/project-two/ptwostylesheet.css
+++ b/project-two/ptwostylesheet.css
@@ -16,86 +16,121 @@ h2 {font-family: 'Climate Crisis', cursive;
   font-size: 15px;
 }
 
-
-  /*homepage*/
-
-   /*navigation*/
-
-/* Position the navbar container inside the image */
-
-
-/* The navbar */
-
-
-
-
-
-  * {box-sizing: border-box;}
-  body {font-family: Verdana, sans-serif;}
-  .mySlides {display: none;}
-  img {vertical-align: middle;}
+a {
+  text-decoration: none;
+  hover: none;
   
-  /* Slideshow container */
-  .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: -10px;
-    z-index: -1;
-    padding-top: 45px;
-  }
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .text {font-size: 11px}
-  }
+}
 
-  /*shopping*/
+
+
+
+/*Home*/
+
+.homecontainer {
+  display: grid; 
+  grid-template-columns: 1fr 5fr ;  
+  gap: 0px 0px;
+  margin: 0px;
+
+}
+
+ul.home {
+  list-style-type: none;
+}
+
+li {
+  
+}
+
+
+.content-home {
+  position: realtive;
+  padding: 0px;
+}
+
+
+.footer {
+  padding: 5px;
+  border-top: .3px solid black;
+}
+
+
+.card {
+  display: flex;
+}
+
+
+
+
+
+
+/*slideshow all*/
+
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+  
+/*allproducts*/
 
 .container {
     display: grid; 
@@ -105,11 +140,7 @@ h2 {font-family: 'Climate Crisis', cursive;
     margin: 0px;
 
   }
-  .nav {
-    padding: 5px;
-    border-right: .3px solid black;
 
-  }
 
   .picturebox {
     position: realtive;
@@ -187,137 +218,38 @@ h2 {font-family: 'Climate Crisis', cursive;
 
   /*aboutpage*/
 
+  .aboutnav {
 
-  .container-about-nav {
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-
-    grid-template-areas:
-    'about-nav'
-    'about-content';
-    
-    gap: 0px;
-    height: 100%;
- 
   }
 
-  .about-nav {
+  .aboutcontainer {
     display: grid; 
+    grid-template-columns: 1fr 5fr ; 
+    grid-template-rows: 10fr 10fr 10fr; 
+    gap: 0px 0px;
+    margin: 0px;
+
   }
 
-  #nav-1 {
 
- 
+  .sidebar {
+    position: realtive;
     border-right: .3px solid black;
-    grid-row-start: 1;
-    grid-column-start: 1;
- 
-    grid-row-end: 1;
-    grid-column-end: 2;
+    padding: 5px;
+  }
+
+  .content-1 {
+    position: realtive;
+    padding: 5px;
+  }
+
+
+  .footer {
+    padding: 5px;
+    border-top: .3px solid black;
+  }
+
+
+  .card {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-right;
-    
- }
- #nav-2 {
- 
-
-    grid-row-start: 1;
-    grid-column-start: 2;
- 
-    grid-row-end: 1;
-    grid-column-end: 3;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-right;
-    
- }
- #nav-3 {
- 
-
-    grid-row-start: 1;
-    grid-column-start: 3;
- 
-    grid-row-end: 1;
-    grid-column-end: 4;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-right;
-    
- }
- #nav-4 {
- 
- 
-    grid-row-start: 1;
-    grid-column-start: 4;
- 
-    grid-row-end: 1;
-    grid-column-end: 5;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-right;
-    
- }
- #nav-5 {
- 
-    grid-row-start: 1;
-    grid-column-start: 5;
- 
-    grid-row-end: 1;
-    grid-column-end: 6;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-right;
-    
- }
-
- #nav-6 {
- 
- 
-  grid-row-start: 1;
-  grid-column-start: 6;
-
-  grid-row-end: 1;
-  grid-column-end: 7;
-
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-right;
-  
-}
-
-
-.about-content {
-  display: grid; 
-}
-
-#sidebar-1 {
-
-  border-right: .3px solid white;
-  grid-row-start: 2;
-  grid-column-start: 1;
-
-  grid-row-end: 3;
-  grid-column-end: 2;
-  
-}
-#content-2 {
-  border-left: .3px solid white;
-  text-decoration-color: white;
-  grid-row-start: 2;
-  grid-column-start: 2;
-  grid-row-end: 3;
-  grid-column-end: 7;
-}
-
-.fuzz-about-parent {
-  position: relative;
-}
-
-.blackblur{
-  position: absolute;
-  z-index:-1;
-  top: px;
-  left: 0px;
-}
+  }
