jk jk this is the last one

--- a/project-two/ptwostylesheet.css
+++ b/project-two/ptwostylesheet.css
@@ -132,16 +132,16 @@ img {vertical-align: middle;}
   
 /*allproducts*/
 
-.shop-header {
-  display: inline;
-}
 
 .shop-nav {
   display: grid; 
-  grid-template-columns: 3fr 3fr 3fr 3fr; 
+  grid-template-columns: 5fr 5fr 5fr 5fr; 
   gap: 0px 0px;
   margin: 0px;
+}
 
+ul.shop {
+  text-decoration: none;
 }
 
 
@@ -184,7 +184,6 @@ img {vertical-align: middle;}
   .productbreak {
     border-right: .3px solid black;
     border-bottom: .3px solid black;
-    border-top: .3px solid black;
     padding: 5px;
     position: bottom;
     display: flex;
