--- a/project-two/ptwostylesheet.css
+++ b/project-two/ptwostylesheet.css
@@ -297,3 +297,39 @@ ul.shop {
   .card {
     display: flex;
   }
+
+
+
+/* Contact Page */
+input[type=text], select, textarea {
+  width: 60%; 
+  padding: 12px; /* Some padding */  
+  border: 1px solid black; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: black;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: black;
+}
+
+/* Add a background color and some padding around the form */
+.containercontact {
+  border-radius: 5px;
+  background-color: black;
+  padding: 20px;
+}  
